<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <io.legado.app.ui.widget.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/book_review_edit" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="12dp"
        android:paddingRight="16dp"
        android:paddingBottom="8dp"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/tv_book_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center"
            android:includeFontPadding="false"
            android:singleLine="true"
            android:textColor="@color/primaryText"
            android:textSize="18sp"
            tools:text="@string/book_name" />

        <TextView
            android:id="@+id/tv_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:ellipsize="end"
            android:gravity="center"
            android:includeFontPadding="false"
            android:singleLine="true"
            android:textColor="@color/tv_text_summary"
            android:textSize="13sp"
            tools:text="@string/author" />

        <io.legado.app.ui.widget.BookRatingBar
            android:id="@+id/book_rating_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp" />

    </LinearLayout>

    <io.legado.app.ui.widget.text.TextInputLayout
        android:id="@+id/til_book_review"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/book_review"
        android:paddingLeft="8dp"
        android:paddingTop="3dp"
        android:paddingRight="8dp"
        tools:ignore="RtlSymmetry">

        <io.legado.app.lib.theme.view.ThemeEditText
            android:id="@+id/tie_book_review"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|start"
            android:inputType="textMultiLine|textCapSentences"
            android:minLines="10"
            android:scrollbars="vertical" />

    </io.legado.app.ui.widget.text.TextInputLayout>

</LinearLayout>
